# mini-api-course

./: .gitignore  pyproject.toml
app/: db.py  main.py  models.py  utils.py
app/routers/: courses.py
test/: test_api.py
