[project]
name = "mini-course-api"
version = "0.1.0"
description = "A simple FastAPI project to practice routing, parameters, and CRUD."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.120.4",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q"
